// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar AvatarCombo renders Avatar and its secondary avatar 1`] = `
.c6 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #9785F2;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c6 svg {
  height: 100%;
  width: 100%;
}

.c3 {
  bottom: 0;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.c2 {
  color: #FFFFFF;
}

.c1 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  color: #6C43E0;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  background: currentColor;
  position: relative;
}

.c1:focus {
  outline: none;
}

.c4 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  background-color: #FFFFFF;
  color: #9785F2;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c4:focus {
  outline: none;
}

.c4 .c5 {
  height: 20px;
  width: 20px;
}

.c0 {
  background: transparent;
  border: none;
  padding: 0;
  border: none;
  height: 40px;
  position: relative;
  width: 40px;
}

.c0 .AvatarCombo__AvatarIconSecondary-gekgjm-0 {
  bottom: -4px;
  height: 20px;
  position: absolute;
  right: -4px;
  width: 20px;
}

.c0 .AvatarCombo__AvatarIconSecondary-gekgjm-0 .c5 {
  height: 14px;
  width: 14px;
}

<div
  className="c0"
>
  <div
    aria-label="John Smith"
    className="c1"
  >
    <div
      aria-hidden={true}
      className="c2"
    >
      JS
    </div>
    <object
      aria-hidden={true}
      className="c3"
      color="key"
      data="https://gravatar.lookercdn.com/avatar/e8ebbdf1a64411721503995731?s=156&d=blank"
      type="image/png"
    />
  </div>
  <div
    className="AvatarCombo__AvatarIconSecondary-gekgjm-0 c4"
  >
    <div
      className="c5 c6"
      role="img"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Avatar AvatarCombo renders Avatar initials and secondary with Code icon 1`] = `
.c6 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #9785F2;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c6 svg {
  height: 100%;
  width: 100%;
}

.c3 {
  bottom: 0;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.c2 {
  color: #FFFFFF;
}

.c1 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  color: #6C43E0;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  background: currentColor;
  position: relative;
}

.c1:focus {
  outline: none;
}

.c4 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  background-color: #FFFFFF;
  color: #9785F2;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c4:focus {
  outline: none;
}

.c4 .c5 {
  height: 20px;
  width: 20px;
}

.c0 {
  background: transparent;
  border: none;
  padding: 0;
  border: none;
  height: 40px;
  position: relative;
  width: 40px;
}

.c0 .AvatarCombo__AvatarIconSecondary-gekgjm-0 {
  bottom: -4px;
  height: 20px;
  position: absolute;
  right: -4px;
  width: 20px;
}

.c0 .AvatarCombo__AvatarIconSecondary-gekgjm-0 .c5 {
  height: 14px;
  width: 14px;
}

<div
  className="c0"
>
  <div
    aria-label="John Smith"
    className="c1"
  >
    <div
      aria-hidden={true}
      className="c2"
    >
      JS
    </div>
    <object
      aria-hidden={true}
      className="c3"
      color="key"
      data="https://gravatar.lookercdn.com/avatar/e8ebbdf1a64411721503995731?s=156&d=blank"
      type="image/png"
    />
  </div>
  <div
    className="AvatarCombo__AvatarIconSecondary-gekgjm-0 c4"
  >
    <div
      className="c5 c6"
      role="img"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Avatar AvatarCombo renders AvatarIcon and secondary avatar if user is not available and updates icon if passed. 1`] = `
.c3 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #9785F2;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c3 svg {
  height: 100%;
  width: 100%;
}

.c1 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  color: #9785F2;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c1:focus {
  outline: none;
}

.c1 .c2 {
  height: 20px;
  width: 20px;
}

.c4 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  background-color: #FFFFFF;
  color: #9785F2;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c4:focus {
  outline: none;
}

.c4 .c2 {
  height: 20px;
  width: 20px;
}

.c0 {
  background: transparent;
  border: none;
  padding: 0;
  border: none;
  height: 40px;
  position: relative;
  width: 40px;
}

.c0 .AvatarCombo__AvatarIconSecondary-gekgjm-0 {
  bottom: -4px;
  height: 20px;
  position: absolute;
  right: -4px;
  width: 20px;
}

.c0 .AvatarCombo__AvatarIconSecondary-gekgjm-0 .c2 {
  height: 14px;
  width: 14px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
      role="img"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 5.9a2.1 2.1 0 110 4.2 2.1 2.1 0 010-4.2zm0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1zM12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    className="AvatarCombo__AvatarIconSecondary-gekgjm-0 c4"
  >
    <div
      className="c2 c3"
      role="img"
    >
      <svg
        aria-hidden={true}
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M11.266 2.249a1.747 1.747 0 11-.08 2.943l.746-.746a.737.737 0 10-.47-.47l-.746.746a1.746 1.746 0 01.55-2.473zm-.344 3.204a2.715 2.715 0 01.214 2.942c-.219.4-.535.74-.918.987L9.69 8.095a1.389 1.389 0 00.263-1.675l.968-.967zM8.759 8.477h-.027a1.39 1.39 0 11.762-2.551l.96-.959a2.731 2.731 0 10-1.17 4.797l-.525-1.287zm1.652 1.376a6.191 6.191 0 011.789-.262l-.004-.001a6.196 6.196 0 11-2.726.631l.768 1.87a4.181 4.181 0 10.939-.363l-.767-1.875z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Avatar AvatarIcon renders  1`] = `
.c2 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #9785F2;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 svg {
  height: 100%;
  width: 100%;
}

.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  background-color: #FFFFFF;
  color: #9785F2;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  height: 20px;
  width: 20px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    role="img"
  >
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 5.9a2.1 2.1 0 110 4.2 2.1 2.1 0 010-4.2zm0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1zM12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar AvatarIcon renders different icon if specified 1`] = `
.c2 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #9785F2;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c2 svg {
  height: 100%;
  width: 100%;
}

.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  background-color: #FFFFFF;
  color: #9785F2;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c0:focus {
  outline: none;
}

.c0 .c1 {
  height: 20px;
  width: 20px;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
    role="img"
  >
    <svg
      aria-hidden={true}
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar AvatarUser shows initials if has broken url as avatar_url 1`] = `
.c2 {
  bottom: 0;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.c1 {
  color: #FFFFFF;
}

.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  color: #6C43E0;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  background: currentColor;
  position: relative;
}

.c0:focus {
  outline: none;
}

<div
  aria-label="John Smith"
  className="c0"
>
  <div
    aria-hidden={true}
    className="c1"
  >
    JS
  </div>
  <object
    aria-hidden={true}
    className="c2"
    color="key"
    data="https://gravatar.lookercdn.com/avatar/e8ebbdf1a64411721503995731?s=156&d=blank"
    type="image/png"
  />
</div>
`;

exports[`Avatar AvatarUser shows initials if it has null as avatar_url  1`] = `
.c1 {
  color: #FFFFFF;
}

.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  color: #6C43E0;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  background: currentColor;
  position: relative;
}

.c0:focus {
  outline: none;
}

<div
  aria-label="John Smith"
  className="c0"
>
  <div
    aria-hidden={true}
    className="c1"
  >
    JS
  </div>
</div>
`;

exports[`Avatar AvatarUser shows user profile picture if it has good avatar_url  1`] = `
.c2 {
  bottom: 0;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.c1 {
  color: #FFFFFF;
}

.c0 {
  font-family: Roboto,'Noto Sans JP','Noto Sans CJK KR','Noto Sans Arabic UI','Noto Sans Devanagari UI','Noto Sans Hebrew','Noto Sans Thai UI',Helvetica,Arial,sans-serif;
  background: transparent;
  border: none;
  padding: 0;
  color: #6C43E0;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  justify-items: center;
  overflow: hidden;
  background: currentColor;
  position: relative;
}

.c0:focus {
  outline: none;
}

<div
  aria-label="John Smith"
  className="c0"
>
  <div
    aria-hidden={true}
    className="c1"
  >
    JS
  </div>
  <object
    aria-hidden={true}
    className="c2"
    color="key"
    data="https://gravatar.lookercdn.com/avatar/e8ebbdf1a64411721503995731?s=156&d=blank"
    type="image/png"
  />
</div>
`;
